--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
 <body>
     <main class="container">
-        <section id="item-1">CONTEUDO PRINCIPAL</section>
-        <section id="item-2">CONTEUDO LATERAL 1</section>
-        <section id="item-3">CONTEUDO LATERAL 2</section>
+        <section id="item-1">
+            <p id="principal">CONTEUDO PRINCIPAL</p>
+        </section>
+        <section id="item-2">
+            <p id="lateral-1">CONTEUDO LATERAL 1</p>
+        </section>
+        <section id="item-3">
+            <p id="lateral-2">CONTEUDO LATERAL 2</p>
+        </section>
     </main>
 </body>
 
